--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 openvas_lib==1.1.7
 numpy==1.16.2
-sqlalchemy==1.2.18
+sqlalchemy>=1.3.0
 whichcraft==0.5.2
 pillow==5.3.0
 ipcalc==1.99.0
-matplotlib==2.2.4
